--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,12 @@
-\documentclass{jsarticle}
+\documentclass{jlreq}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{amsthm} 
 \usepackage{macros} 
+
+% \usepackage[backend=biber,style=alphabetic,url=false]{biblatex}
+% \addbibresource{main.bib}
 
 \title{テンプレート}
 \author{Mateusz Zunderewski}
